@@ -231,10 +231,16 @@ class rest_controller : public controller
 			std::apply(m_callback, std::forward<ArgsTuple>(args));
 		}
 
-		template<typename ResultType, typename ArgsTuple, std::enable_if_t<not std::is_void_v<ResultType>, int> = 0>
+		template<typename ResultType, typename ArgsTuple, std::enable_if_t<not (std::is_void_v<ResultType> or std::is_same_v<ResultType, reply>), int> = 0>
 		void invoke(ArgsTuple&& args, reply& reply)
 		{
 			set_reply(reply, std::apply(m_callback, std::forward<ArgsTuple>(args)));
+		}
+
+		template<typename ResultType, typename ArgsTuple, std::enable_if_t<std::is_same_v<ResultType, reply>, int> = 0>
+		void invoke(ArgsTuple&& args, reply& reply)
+		{
+			reply = std::apply(m_callback, std::forward<ArgsTuple>(args));
 		}
 
 		void set_reply(reply& rep, std::filesystem::path v)
