@@ -17,59 +17,45 @@ namespace zeep::http
 namespace detail
 {
 
-struct status_string
-{
-	status_type	code;
-	const char*	text;
-} kStatusStrings[] = {
-	{ cont,					"Continue" },
-	{ ok,					"OK" },
-	{ created,				"Created" },
-	{ accepted,				"Accepted" },
-	{ no_content,			"No Content" },
-	{ multiple_choices,		"Multiple Choices" },
-	{ moved_permanently,	"Moved Permanently" },
-	{ moved_temporarily,	"Found" },
-	{ see_other,			"See Other" },
-	{ not_modified,			"Not Modified" },
-	{ bad_request,			"Bad Request" },
-	{ unauthorized,			"Unauthorized" },
-	{ proxy_authentication_required,	"Proxy Authentication Required" },
-	{ forbidden,			"Forbidden" },
-	{ not_found,			"Not Found" },
-	{ method_not_allowed,	"Method not allowed" },
-	{ internal_server_error,"Internal Server Error" },
-	{ not_implemented,		"Not Implemented" },
-	{ bad_gateway,			"Bad Gateway" },
-	{ service_unavailable,	"Service Unavailable" }
-}, kStatusDescriptions[] = {
-	{ moved_permanently,	"The document requested was moved permanently to a new location" },
-	{ moved_temporarily,	"The document requested was moved temporarily to a new location" },
-	{ see_other,			"The document can be found at another location" },
-	{ not_modified,			"The requested document was not modified" },
-	{ bad_request,			"There was an error in the request, e.g. an incorrect method or a malformed URI" },
-	{ unauthorized,			"You are not authorized to access this location" },
-	{ proxy_authentication_required,	"You are not authorized to use this proxy" },
-	{ forbidden,			"Access to this location is forbidden" },
-	{ not_found,			"The requested web page was not found on this server." },
-	{ internal_server_error,"An internal error prevented the server from processing your request" },
-	{ not_implemented,		"Your request could not be handled since the required code is not implemented" },
-	{ bad_gateway,			"The server, while acting as a gateway or proxy, received an invalid response from the upstream server it accessed in attempting to fulfill the request. " },
-	{ service_unavailable,	"The service is unavailable at this moment, try again later" }
-};
+	struct status_string
+	{
+		status_type code;
+		const char *text;
+	} kStatusStrings[] = {
+		{cont, "Continue"},
+		{ok, "OK"},
+		{created, "Created"},
+		{accepted, "Accepted"},
+		{no_content, "No Content"},
+		{multiple_choices, "Multiple Choices"},
+		{moved_permanently, "Moved Permanently"},
+		{moved_temporarily, "Found"},
+		{see_other, "See Other"},
+		{not_modified, "Not Modified"},
+		{bad_request, "Bad Request"},
+		{unauthorized, "Unauthorized"},
+		{proxy_authentication_required, "Proxy Authentication Required"},
+		{forbidden, "Forbidden"},
+		{not_found, "Not Found"},
+		{method_not_allowed, "Method not allowed"},
+		{internal_server_error, "Internal Server Error"},
+		{not_implemented, "Not Implemented"},
+		{bad_gateway, "Bad Gateway"},
+		{service_unavailable, "Service Unavailable"}},
+	  kStatusDescriptions[] = {{moved_permanently, "The document requested was moved permanently to a new location"}, {moved_temporarily, "The document requested was moved temporarily to a new location"}, {see_other, "The document can be found at another location"}, {not_modified, "The requested document was not modified"}, {bad_request, "There was an error in the request, e.g. an incorrect method or a malformed URI"}, {unauthorized, "You are not authorized to access this location"}, {proxy_authentication_required, "You are not authorized to use this proxy"}, {forbidden, "Access to this location is forbidden"}, {not_found, "The requested web page was not found on this server."}, {internal_server_error, "An internal error prevented the server from processing your request"}, {not_implemented, "Your request could not be handled since the required code is not implemented"}, {bad_gateway, "The server, while acting as a gateway or proxy, received an invalid response from the upstream server it accessed in attempting to fulfill the request. "}, {service_unavailable, "The service is unavailable at this moment, try again later"}};
 
-const int
-	kStatusStringCount = sizeof(kStatusStrings) / sizeof(status_string);
+	const int
+		kStatusStringCount = sizeof(kStatusStrings) / sizeof(status_string);
 
-const int
-	kStatusDescriptionCount = sizeof(kStatusDescriptions) / sizeof(status_string);
-	
-}
+	const int
+		kStatusDescriptionCount = sizeof(kStatusDescriptions) / sizeof(status_string);
+
+} // namespace detail
 
 std::string get_status_text(status_type status)
 {
 	std::string result = "Internal Service Error";
-	
+
 	for (int i = 0; i < detail::kStatusStringCount; ++i)
 	{
 		if (detail::kStatusStrings[i].code == status)
@@ -78,14 +64,14 @@ std::string get_status_text(status_type status)
 			break;
 		}
 	}
-	
+
 	return result;
 }
-	
+
 std::string get_status_description(status_type status)
 {
 	std::string result = "An internal error prevented the server from processing your request";
-	
+
 	for (int i = 0; i < detail::kStatusDescriptionCount; ++i)
 	{
 		if (detail::kStatusDescriptions[i].code == status)
@@ -94,21 +80,21 @@ std::string get_status_description(status_type status)
 			break;
 		}
 	}
-	
+
 	return result;
 }
-	
+
 // ----------------------------------------------------------------------------
 
 namespace
 {
-const std::string
-		kNameValueSeparator{ ':', ' ' },
-		kCRLF{ '\r', '\n' },
-		kZERO{ '0' };
+	const std::string
+		kNameValueSeparator{':', ' '},
+		kCRLF{'\r', '\n'},
+		kZERO{'0'};
 }
 
-reply::reply(status_type status, std::tuple<int,int> version)
+reply::reply(status_type status, std::tuple<int, int> version)
 	: m_status(status)
 	, m_version_major(std::get<0>(version))
 	, m_version_minor(std::get<1>(version))
@@ -118,8 +104,8 @@ reply::reply(status_type status, std::tuple<int,int> version)
 	using namespace boost::posix_time;
 
 	local_date_time t(local_sec_clock::local_time(time_zone_ptr()));
-	local_time_facet* lf(new local_time_facet("%a, %d %b %Y %H:%M:%S GMT"));
-	
+	local_time_facet *lf(new local_time_facet("%a, %d %b %Y %H:%M:%S GMT"));
+
 	std::stringstream s;
 	s.imbue(std::locale(std::locale(), lf));
 
@@ -130,15 +116,15 @@ reply::reply(status_type status, std::tuple<int,int> version)
 	set_header("Content-Length", "0");
 }
 
-reply::reply(status_type status, std::tuple<int,int> version,
-		std::vector<header>&& headers, std::string&& payload)
+reply::reply(status_type status, std::tuple<int, int> version,
+	std::vector<header> &&headers, std::string &&payload)
 	: reply(status, version)
 {
 	m_headers = std::move(headers);
 	m_content = std::move(payload);
 }
 
-reply::reply(const reply& rhs)
+reply::reply(const reply &rhs)
 	: m_status(rhs.m_status)
 	, m_version_major(rhs.m_version_major)
 	, m_version_minor(rhs.m_version_minor)
@@ -160,7 +146,7 @@ void reply::reset()
 	std::swap(tmp, *this);
 }
 
-reply& reply::operator=(const reply& rhs)
+reply &reply::operator=(const reply &rhs)
 {
 	if (this != &rhs)
 	{
@@ -170,7 +156,22 @@ reply& reply::operator=(const reply& rhs)
 		m_headers = rhs.m_headers;
 		m_content = rhs.m_content;
 	}
-	
+
+	return *this;
+}
+
+reply &reply::operator=(reply &&rhs)
+{
+	if (this != &rhs)
+	{
+		m_version_major = rhs.m_version_major;
+		m_version_minor = rhs.m_version_minor;
+		m_status = rhs.m_status;
+		m_data = rhs.m_data; rhs.m_data = nullptr;
+		m_headers = rhs.m_headers;
+		m_content = rhs.m_content;
+	}
+
 	return *this;
 }
 
@@ -213,16 +214,16 @@ void reply::set_version(int version_major, int version_minor)
 			length -= pos;
 			m_data->rdbuf()->pubseekoff(pos, std::ios_base::beg);
 		}
-		
+
 		set_header("Content-Length", boost::lexical_cast<std::string>(length));
 		remove_header("Transfer-Encoding");
 	}
 }
 
-void reply::set_header(const std::string& name, const std::string& value)
+void reply::set_header(const std::string &name, const std::string &value)
 {
 	bool updated = false;
-	for (header& h: m_headers)
+	for (header &h : m_headers)
 	{
 		if (iequals(h.name, name))
 		{
@@ -231,19 +232,19 @@ void reply::set_header(const std::string& name, const std::string& value)
 			break;
 		}
 	}
-	
+
 	if (not updated)
 	{
-		header nh = { name, value };
+		header nh = {name, value};
 		m_headers.push_back(nh);
 	}
 }
 
-std::string reply::get_header(const std::string& name) const
+std::string reply::get_header(const std::string &name) const
 {
 	std::string result;
 
-	for (const header& h: m_headers)
+	for (const header &h : m_headers)
 	{
 		if (iequals(h.name, name))
 		{
@@ -255,44 +256,44 @@ std::string reply::get_header(const std::string& name) const
 	return result;
 }
 
-void reply::remove_header(const std::string& name)
+void reply::remove_header(const std::string &name)
 {
 	m_headers.erase(
-		std::remove_if(m_headers.begin(), m_headers.end(), [name](header& h) { return iequals(h.name, name); }),
+		std::remove_if(m_headers.begin(), m_headers.end(), [name](header &h) { return iequals(h.name, name); }),
 		m_headers.end());
 }
 
-void reply::set_cookie(const char* name, const std::string& value, std::initializer_list<cookie_directive> directives)
+void reply::set_cookie(const char *name, const std::string &value, std::initializer_list<cookie_directive> directives)
 {
 	std::ostringstream vs;
 	vs << name << '=' << value;
-	for (auto& directive: directives)
+	for (auto &directive : directives)
 		vs << "; " << directive.name << (directive.value.empty() ? "" : "=" + directive.value);
-	
-	m_headers.push_back({ "Set-Cookie", vs.str() });
+
+	m_headers.push_back({"Set-Cookie", vs.str()});
 }
 
-void reply::set_delete_cookie(const char* name)
+void reply::set_delete_cookie(const char *name)
 {
 	using namespace boost::local_time;
 	using namespace boost::posix_time;
 
 	local_date_time t(local_sec_clock::local_time(time_zone_ptr()));
-	local_time_facet* lf(new local_time_facet("%a, %d %b %Y %H:%M:%S GMT"));
-	
+	local_time_facet *lf(new local_time_facet("%a, %d %b %Y %H:%M:%S GMT"));
+
 	std::stringstream s;
 	s.imbue(std::locale(std::locale(), lf));
 
 	s << (t - hours(24));
 
-	set_cookie(name, "", { { "Expires", '"' + s.str() + '"' } });
+	set_cookie(name, "", {{"Expires", '"' + s.str() + '"'}});
 }
 
-std::string reply::get_cookie(const char* name) const
+std::string reply::get_cookie(const char *name) const
 {
 	std::string result;
 
-	for (const header& h: m_headers)
+	for (const header &h : m_headers)
 	{
 		if (iequals(h.name, "Set-Cookie"))
 		{
@@ -301,10 +302,10 @@ std::string reply::get_cookie(const char* name) const
 			auto ns = result.find('=');
 			if (ns == std::string::npos)
 				continue;
-			
+
 			if (result.compare(0, ns, name) != 0)
 				continue;
-			
+
 			auto ds = result.find(';', ns + 1);
 
 			result = result.substr(ns + 1, ds - ns - 1);
@@ -315,21 +316,21 @@ std::string reply::get_cookie(const char* name) const
 	return result;
 }
 
-void reply::set_content(const json::element& json)
+void reply::set_content(const json::element &json)
 {
 	std::ostringstream s;
 	s << json;
 	set_content(s.str(), "application/json");
 }
 
-void reply::set_content(const xml::element& data)
+void reply::set_content(const xml::element &data)
 {
 	std::stringstream s;
 	s << data;
 	set_content(s.str(), "text/xml; charset=utf-8");
 }
 
-void reply::set_content(xml::document& doc)
+void reply::set_content(xml::document &doc)
 {
 	std::stringstream s;
 
@@ -350,9 +351,9 @@ void reply::set_content(xml::document& doc)
 	}
 
 	s << doc;
-	
+
 	std::string contentType;
-	
+
 	if (doc.is_html5())
 		contentType = "text/html; charset=utf-8";
 	else if (doc.child()->get_ns() == "http://www.w3.org/1999/xhtml")
@@ -363,7 +364,7 @@ void reply::set_content(xml::document& doc)
 	set_content(s.str(), contentType);
 }
 
-void reply::set_content(const std::string& data, const std::string& contentType)
+void reply::set_content(const std::string &data, const std::string &contentType)
 {
 	m_content = data;
 	m_status = ok;
@@ -377,7 +378,7 @@ void reply::set_content(const std::string& data, const std::string& contentType)
 	set_header("Content-Type", contentType);
 }
 
-void reply::set_content(const char* data, size_t size, const std::string& contentType)
+void reply::set_content(const char *data, size_t size, const std::string &contentType)
 {
 	m_content = std::string(data, size);
 	m_status = ok;
@@ -391,7 +392,7 @@ void reply::set_content(const char* data, size_t size, const std::string& conten
 	set_header("Content-Type", contentType);
 }
 
-void reply::set_content(std::istream* idata, const std::string& contentType)
+void reply::set_content(std::istream *idata, const std::string &contentType)
 {
 	delete m_data;
 	m_data = idata;
@@ -411,10 +412,10 @@ std::vector<boost::asio::const_buffer> reply::to_buffers() const
 
 	m_status_line =
 		"HTTP/" + std::to_string(m_version_major) + '.' + std::to_string(m_version_minor) + ' ' + std::to_string(m_status) + ' ' + get_status_text(m_status) + kCRLF;
-	
+
 	result.push_back(boost::asio::buffer(m_status_line));
-	
-	for (const header& h: m_headers)
+
+	for (const header &h : m_headers)
 	{
 		result.push_back(boost::asio::buffer(h.name));
 		result.push_back(boost::asio::buffer(kNameValueSeparator));
@@ -431,11 +432,11 @@ std::vector<boost::asio::const_buffer> reply::to_buffers() const
 std::vector<boost::asio::const_buffer> reply::data_to_buffers()
 {
 	std::vector<boost::asio::const_buffer> result;
-	
+
 	if (m_data != nullptr)
 	{
 		const unsigned int kMaxChunkSize = 10240;
-		
+
 		m_buffer.resize(kMaxChunkSize);
 		std::streamsize n = m_data->rdbuf()->sgetn(m_buffer.data(), m_buffer.size());
 
@@ -453,8 +454,8 @@ std::vector<boost::asio::const_buffer> reply::data_to_buffers()
 			else
 			{
 				const char kHex[] = "0123456789abcdef";
-				char* e = m_size_buffer + sizeof(m_size_buffer);
-				char* p = e;
+				char *e = m_size_buffer + sizeof(m_size_buffer);
+				char *p = e;
 				auto l = n;
 
 				while (n != 0)
@@ -484,7 +485,7 @@ std::vector<boost::asio::const_buffer> reply::data_to_buffers()
 	return result;
 }
 
-reply reply::stock_reply(status_type status, const std::string& info)
+reply reply::stock_reply(status_type status, const std::string &info)
 {
 	reply result;
 
@@ -495,37 +496,38 @@ reply reply::stock_reply(status_type status, const std::string& info)
 		text << "<html>" << std::endl
 			 << "  <body>" << std::endl
 			 << "    <h1>" << get_status_text(status) << "</h1>" << std::endl;
-		
+
 		if (not info.empty())
 		{
 			text << "    <p>";
-		
-			for (char c: info)
+
+			for (char c : info)
 			{
 				switch (c)
 				{
-					case '&':	text << "&amp;"; break;
-					case '<':	text << "&lt;"; break;
-					case '>':	text << "&gt;"; break;
-					case 0:		break;	// silently ignore
-					default:	if ((c >= 1 and c <= 8) or (c >= 0x0b and c <= 0x0c) or (c >= 0x0e and c <= 0x1f) or c == 0x7f)
-									text << "&#" << std::hex << c << ';';
-								else	
-									text << c;
-								break;
+					case '&': text << "&amp;"; break;
+					case '<': text << "&lt;"; break;
+					case '>': text << "&gt;"; break;
+					case 0: break; // silently ignore
+					default:
+						if ((c >= 1 and c <= 8) or (c >= 0x0b and c <= 0x0c) or (c >= 0x0e and c <= 0x1f) or c == 0x7f)
+							text << "&#" << std::hex << c << ';';
+						else
+							text << c;
+						break;
 				}
 			}
-			
+
 			text << "</p>" << std::endl;
 		}
-		
+
 		text << "  </body>" << std::endl
 			 << "</html>";
 		result.set_content(text.str(), "text/html; charset=utf-8");
 	}
 
 	result.m_status = status;
-	
+
 	return result;
 }
 
@@ -534,7 +536,7 @@ reply reply::stock_reply(status_type status)
 	return stock_reply(status, "");
 }
 
-reply reply::redirect(const std::string& location, status_type status)
+reply reply::redirect(const std::string &location, status_type status)
 {
 	reply result;
 
@@ -543,16 +545,16 @@ reply reply::redirect(const std::string& location, status_type status)
 	std::string text = get_status_text(status);
 	result.m_content =
 		"<html><head><title>" + text + "</title></head><body><h1>" +
- 		std::to_string(status) + ' ' + text + "</h1></body></html>";
-	
+		std::to_string(status) + ' ' + text + "</h1></body></html>";
+
 	result.set_header("Location", location);
 	result.set_header("Content-Length", std::to_string(result.m_content.length()));
 	result.set_header("Content-Type", "text/html; charset=utf-8");
-	
+
 	return result;
 }
 
-reply reply::redirect(const std::string& location)
+reply reply::redirect(const std::string &location)
 {
 	return redirect(location, moved_temporarily);
 }
@@ -560,15 +562,15 @@ reply reply::redirect(const std::string& location)
 size_t reply::size() const
 {
 	auto buffers = to_buffers();
-	return std::accumulate(buffers.begin(), buffers.end(), 0LL, [](size_t m, auto& buffer) { return m + boost::asio::buffer_size(buffer); });
+	return std::accumulate(buffers.begin(), buffers.end(), 0LL, [](size_t m, auto &buffer) { return m + boost::asio::buffer_size(buffer); });
 }
 
-std::ostream& operator<<(std::ostream& lhs, const reply& rhs)
+std::ostream &operator<<(std::ostream &lhs, const reply &rhs)
 {
-	for (auto& b: rhs.to_buffers())
-		lhs.write(static_cast<const char*>(b.data()), b.size());
+	for (auto &b : rhs.to_buffers())
+		lhs.write(static_cast<const char *>(b.data()), b.size());
 
 	return lhs;
 }
 
-}
+} // namespace zeep::http
